[gd_scene load_steps=3 format=3 uid="uid://dxymi4ampb52w"]

[ext_resource type="Script" path="res://src/ui/options_menu/reset_options_menu/reset_options_menu_manager.gd" id="1_ilmwj"]
[ext_resource type="Theme" uid="uid://bi5sl1kglohpl" path="res://assets/themes/light_blue_theme.tres" id="2_lle3c"]

[node name="ResetOptionsMenu" type="CanvasLayer"]
script = ExtResource("1_ilmwj")

[node name="FullWindow" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundPanel" type="Panel" parent="FullWindow"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.185
anchor_top = 0.3
anchor_right = 0.815
anchor_bottom = 0.75
offset_top = -1.52588e-05
offset_right = -1.04904e-05
theme = ExtResource("2_lle3c")

[node name="TitleLabel" type="Label" parent="FullWindow/BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.2
theme_override_font_sizes/font_size = 50
text = "Reset Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButtonsContainer" type="VBoxContainer" parent="FullWindow/BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.2
anchor_right = 0.95
anchor_bottom = 0.95
theme_override_constants/separation = 30

[node name="ResetCurrentDayButton" type="Button" parent="FullWindow/BackgroundPanel/OptionButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Reset current day"

[node name="ResetCurrentMonthButton" type="Button" parent="FullWindow/BackgroundPanel/OptionButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Reset current month"

[node name="ResetCurrentYearButton" type="Button" parent="FullWindow/BackgroundPanel/OptionButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Reset current year"

[node name="ResetAllButton" type="Button" parent="FullWindow/BackgroundPanel/OptionButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Reset all saved progress"

[node name="CloseMenuButton" type="Button" parent="FullWindow/BackgroundPanel/OptionButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Close"
